changing ruby-overhang values does not trigger layout https://bugs.webkit.org/show_bug.cgi?id=295694 <rdar://problem/156038239>

Reviewed by Antti Koivisto and Tim Nguyen.

Let's trigger a layout when the ruby-overhang value changes, since modifying the overhanging behavior affects layout.

* LayoutTests/imported/w3c/web-platform-tests/css/css-ruby/ruby-overhang-dynamic-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-ruby/ruby-overhang-dynamic-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-ruby/ruby-overhang-dynamic.html: Added.
* Source/WebCore/rendering/style/RenderStyle.cpp:
(WebCore::rareInheritedDataChangeRequiresLayout):

Canonical link: https://commits.webkit.org/299091@main