Source/WebCore/rendering/style/RenderStyle.cpp
@@ -948,6 +948,7 @@ static bool rareInheritedDataChangeRequiresLayout(const StyleRareInheritedData& 
         || first.hyphenateCharacter != second.hyphenateCharacter
         || first.rubyPosition != second.rubyPosition
         || first.rubyAlign != second.rubyAlign
+        || first.rubyOverhang != second.rubyOverhang
         || first.textCombine != second.textCombine
         || first.textEmphasisStyle != second.textEmphasisStyle
         || first.textEmphasisPosition != second.textEmphasisPosition
